Updated datatype to strings in python

--- a/ColeridgeInitiative.ipynb
+++ b/ColeridgeInitiative.ipynb
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,12 +834,12 @@
     }
    ],
    "source": [
-    "print(df)"
+    "#print(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,7 @@
        "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "4        5c9a3bc941ba4574ad71e25c1442c8afStepping  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,30 +994,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-92-d61790222744>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#Convert to lowercase since python is case-sensitive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'pub_title_tokenized'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'pub_title'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mtokenize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers"
-     ]
+     "data": {
+      "text/plain": [
+       "dtype('O')"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df['pub_title'].dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Id               object\n",
+       "pub_title        object\n",
+       "dataset_title    object\n",
+       "dataset_label    object\n",
+       "cleaned_label    object\n",
+       "id_clean         object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking datatypes\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>pub_title</th>\n",
+       "      <th>dataset_title</th>\n",
+       "      <th>dataset_label</th>\n",
+       "      <th>cleaned_label</th>\n",
+       "      <th>id_clean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Id,pub_title,dataset_title,dataset_label,clean...</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>Idpubtitledatasettitledatasetlabelcleanedlabel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>d0fa7568-7d8e-4db9-870f-f9c6f668c17b,The</td>\n",
+       "      <td>Impact</td>\n",
+       "      <td>of</td>\n",
+       "      <td>Dual</td>\n",
+       "      <td>Enrollment</td>\n",
+       "      <td>d0fa75687d8e4db9870ff9c6f668c17bThe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2f26f645-3dec-485d-b68d-f013c9e05e60,Educational</td>\n",
+       "      <td>Attainment</td>\n",
+       "      <td>of</td>\n",
+       "      <td>High</td>\n",
+       "      <td>School</td>\n",
+       "      <td>2f26f6453dec485db68df013c9e05e60Educational</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>c5d5cd2c-59de-4f29-bbb1-6a88c7b52f29,Differences</td>\n",
+       "      <td>in</td>\n",
+       "      <td>Outcomes</td>\n",
+       "      <td>for</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>c5d5cd2c59de4f29bbb16a88c7b52f29Differences</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5c9a3bc9-41ba-4574-ad71-e25c1442c8af,Stepping</td>\n",
+       "      <td>Stone</td>\n",
+       "      <td>and</td>\n",
+       "      <td>Option</td>\n",
+       "      <td>Value</td>\n",
+       "      <td>5c9a3bc941ba4574ad71e25c1442c8afStepping</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Id   pub_title  \\\n",
+       "0  Id,pub_title,dataset_title,dataset_label,clean...         nan   \n",
+       "1           d0fa7568-7d8e-4db9-870f-f9c6f668c17b,The      Impact   \n",
+       "2   2f26f645-3dec-485d-b68d-f013c9e05e60,Educational  Attainment   \n",
+       "3   c5d5cd2c-59de-4f29-bbb1-6a88c7b52f29,Differences          in   \n",
+       "4      5c9a3bc9-41ba-4574-ad71-e25c1442c8af,Stepping       Stone   \n",
+       "\n",
+       "  dataset_title dataset_label cleaned_label  \\\n",
+       "0           nan           nan           nan   \n",
+       "1            of          Dual    Enrollment   \n",
+       "2            of          High        School   \n",
+       "3      Outcomes           for        Female   \n",
+       "4           and        Option         Value   \n",
+       "\n",
+       "                                         id_clean  \n",
+       "0  Idpubtitledatasettitledatasetlabelcleanedlabel  \n",
+       "1             d0fa75687d8e4db9870ff9c6f668c17bThe  \n",
+       "2     2f26f6453dec485db68df013c9e05e60Educational  \n",
+       "3     c5d5cd2c59de4f29bbb16a88c7b52f29Differences  \n",
+       "4        5c9a3bc941ba4574ad71e25c1442c8afStepping  "
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def tokenize(text):\n",
     "    tokens = re.split('\\W+', text)\n",
     "    return tokens\n",
     "\n",
     "#Convert to lowercase since python is case-sensitive\n",
-    "df['pub_title_tokenized'] = df['pub_title'].apply(lambda x: tokenize(x.lower()))\n",
-    "\n",
-    "df.head()"
+    "df['pub_title_tokenized'] = df['pub_title'].apply(lambda x: tokenize(x.lower()))"
    ]
   },
   {
